--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   permission_handler: ^12.0.1
   bridgefy: ^1.1.10
+  fluttertoast: ^8.2.4
+  flutter_local_notifications: ^17.0.0
 
 dev_dependencies:
   flutter_test:
