--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,21 @@
   <uses-permission android:name="android.permission.BLUETOOTH_SCAN" tools:node="replace" />  
   <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 
+<queries>
+    <intent>
+        <action android:name="android.intent.action.VIEW" />
+        <data android:scheme="https" />
+    </intent>
+    <intent>
+        <action android:name="android.intent.action.VIEW" />
+        <data android:scheme="http" />
+    </intent>
+    <intent>
+        <action android:name="android.intent.action.VIEW" />
+        <data android:scheme="geo" />
+    </intent>
+</queries>
+
     <application
     
         android:label="flutter_application_3"
