--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_local_notifications: ^17.0.0
   geolocator: ^14.0.2
   url_launcher: ^6.3.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
